<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="@color/itm_bg" >   
 
     <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/fullname"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="20dip"/>
 
     <EditText android:id="@+id/txtName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dip"
         android:hint="@string/hintname"
         android:inputType="textPersonName"
         android:layout_marginBottom="20dip"/>
 
     <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/email"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"/>
 
     <EditText android:id="@+id/txtEmail"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dip"
         android:hint="@string/hintemail"
         android:inputType="textEmailAddress"
         android:layout_marginBottom="20dip"/>
 
     <Button android:id="@+id/btnRegister"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/register"
         android:layout_margin="10dip"/>
 
     
     <View android:id="@+id/seperator"
         android:layout_width="fill_parent"
         android:layout_height="5dp"
         
         />
     
     
     <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/registerhelp"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="20dip"
         android:textStyle="bold"/>
 
     <Button
        android:id="@+id/dwnmanager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       	android:layout_marginTop="10dip"
        android:layout_marginRight="15dip"
        android:layout_marginLeft="15dip"
        android:background="@drawable/buttoncol"
        android:text="@string/dwnmgroffline"
        android:textColor="@drawable/text_color"
         />
     
</LinearLayout>