<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
   
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/itm_bg">
<RelativeLayout
    android:id="@+id/rel"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" 
    >
    

<ImageView 
    android:id="@+id/homelogo"
    android:src="@drawable/ic_launcher" 
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_marginTop="5dp"
     android:layout_centerHorizontal="true"
    android:gravity="center"
    android:contentDescription="@string/dev_name"
    />

<TextView
    android:id="@+id/textdev"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:text="@string/dev_name"
    android:textColor="#999999" 
    android:textSize="9dp"
    android:layout_below="@id/homelogo"/>


     <View android:id="@+id/separator" 
          android:background="#000000" 
          android:layout_width = "fill_parent"
          android:layout_height="2dip"
          android:layout_marginTop="10dip"
          android:layout_below="@id/textdev"
          />

<TableLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" 
      android:id="@+id/root"
      android:stretchColumns="*"
      android:layout_below="@id/separator"
      >    
     <TableRow android:layout_margin="0dip"
         android:id="@+id/first_row"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_weight="0.3">
    <Button
        android:id="@+id/btnViewResults"
         android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_marginTop="25dip"
        android:layout_marginRight="15dip"
        android:layout_marginLeft="15dip"        
        android:text="@string/results" 
        android:background="@drawable/buttoncol"
        android:textColor="@drawable/text_color" />
 
    <!--  Button to create a new product screen -->
    <Button android:id="@+id/btnViewNotices"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:text="@string/notices"
        android:layout_marginTop="25dip"
        android:layout_marginRight="15dip"
        android:layout_marginLeft="15dip"
        android:background="@drawable/buttoncol" 
        android:textColor="@drawable/text_color" />
    </TableRow>

<TableRow android:layout_margin="0dip"
         android:id="@+id/second_row"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_weight="0.3">
     <!--  Button to create a new product screen -->
    <Button android:id="@+id/btnViewAnnounce"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:text="@string/announ"
        android:layout_marginTop="25dip"
        android:layout_marginRight="15dip"
        android:layout_marginLeft="15dip"
        android:background="@drawable/buttoncol"
        android:textColor="@drawable/text_color" />

        <Button
        android:id="@+id/btntt"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_marginTop="25dip"
        android:layout_marginRight="15dip"
        android:layout_marginLeft="15dip"
        android:background="@drawable/buttoncol"
        android:text="@string/tt"
        android:textColor="@drawable/text_color"
         />
</TableRow>

 <TableRow android:layout_margin="0dip"
         android:id="@+id/third_row"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_weight="0.3">
        
        <Button
        android:id="@+id/btntalky"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_marginTop="25dip"
        android:layout_marginLeft="15dip"
        android:background="@drawable/buttoncol"
        android:text="@string/talky"
        android:textColor="@drawable/text_color"
         />

        <Button android:id="@+id/btnabt"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:text="@string/about"
        android:layout_marginTop="25dip"
        android:layout_marginRight="15dip"
        android:layout_marginLeft="15dip"
        android:background="@drawable/buttoncol"
        android:textColor="@drawable/text_color" />
</TableRow>    
		
    <Button
        android:id="@+id/dwnmanager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
       	android:layout_marginTop="25dip"
        android:layout_marginRight="15dip"
        android:layout_marginLeft="15dip"
        android:background="@drawable/buttoncol"
        android:text="@string/dwnmgr"
        android:textColor="@drawable/text_color"
         />
    


</TableLayout>       
    <View android:id="@+id/sepbottom" 
          android:background="#000000" 
          android:layout_width = "fill_parent"
          android:layout_height="2dip"
          android:layout_marginTop="10dip"
          android:layout_below="@id/root"
          />
     
		<Button
		    android:id="@+id/ratemyapp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/sepbottom"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="27dp"
		    android:background="@drawable/buttoncol"
		    android:gravity="center"
		    android:text="@string/ratemyapp"
		    android:textColor="@drawable/text_color" />
    
    
    	<TextView
		    android:id="@+id/lblMessage"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/ratemyapp"
		    android:layout_marginTop="10sp"
		    android:gravity="center"
		    android:textSize="12sp" />

	

</RelativeLayout>
</ScrollView>