<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/itm_bg"
    android:orientation="vertical"
    android:textColor="@drawable/text_color" >

    <TextView
        android:id="@+id/textView8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:autoLink="web"
        android:paddingLeft="12dip"
        android:paddingTop="6dip"
        android:text="@string/abtme"
        android:textColorLink="@color/link"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView8"
        android:autoLink="all"
        android:paddingLeft="12dip"
        android:paddingTop="6dip"
        android:text="@string/devinfo"
        android:textColorLink="@color/link"
        android:textSize="12sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/bttnfb"
        android:layout_width="50dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@color/itm_bg"
        android:contentDescription="@string/devsocio"
        android:src="@drawable/fb" />
    
     <ImageView
         android:id="@+id/splogo"
         android:layout_width="150dip"
         android:layout_height="50dip"
         android:layout_below="@+id/textView21"
         android:layout_marginTop="17dp"
         android:layout_centerHorizontal="true"
         android:background="@color/itm_bg"
         android:contentDescription="@string/devsocio"
         android:src="@drawable/newspllogosmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bttnfb"
        android:layout_marginTop="20dp"
        android:autoLink="web"
        android:gravity="center"
        android:paddingLeft="12dip"
        android:paddingTop="6dip"
        android:text="@string/devsocio"
        android:textColorLink="@color/link"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/splogo"
        android:layout_marginTop="16dp"
        android:autoLink="all"
        android:paddingLeft="12dip"
        android:paddingTop="6dip"
        android:text="@string/fag"
        android:textColorLink="@color/link"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:autoLink="web"
        android:paddingLeft="12dip"
        android:paddingTop="6dip"
        android:text="@string/aboutSPL"
        android:textColorLink="@color/link"
        android:textSize="12sp" />

</RelativeLayout>